--- a/notebooks/invitro.ipynb
+++ b/notebooks/invitro.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "ec799eec-cc1c-40ed-8418-9a25708f77db",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Here we'll try to replicate the results of Venturelli et al, measuring butyrate production in synthetically constructed _in vitro_ communities. We'll hope to see that predictions of butyrate production from MICOM constructed community models accurately reflect the measured butyrate production from the experiments. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "09f49570-1c70-4d0b-9370-2c8f869facf9",
    "metadata": {},
    "outputs": [],
@@ -19,13 +21,11 @@
     "import pandas as pd\n",
     "from plotnine import *\n",
     "from tqdm import tqdm\n",
-    "import sklearn\n",
     "import numpy as np\n",
     "import scipy\n",
     "import micom\n",
     "import micom.measures\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore')\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ad0d35c7-d77b-4fea-8cfc-3a6359a0cf32",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e8da0bc6-a8fa-48dc-bec3-8bec22607c30",
    "metadata": {},
    "outputs": [],
@@ -126,14 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0ba07a39-925c-43f4-8f7c-97f04971d82d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('../data')\n",
     "#read in the dataframe\n",
-    "main = pd.read_csv('abundanceDF.csv',index_col=0) #get the dataframe\n",
+    "main = pd.read_csv('../data/invitro_data.csv',index_col=0) #get the dataframe\n",
     "#drop HB - abbreviation not given in manuscript\n",
     "main = main.drop(columns = 'HB')\n",
     "#for columns 11:37, which represent binary presence/absence as a 1 or 0 for each species, we fill in zeros for NAs. \n",
@@ -160,143 +159,18 @@
     "tags": []
    },
    "source": [
-    "## Lets also pull up the componentized diet dataframe"
+    "## Let's also pull up the componentized diet dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c0d19de0-0fef-461f-aca8-e8e634b38eff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metabolite</th>\n",
-       "      <th>flux</th>\n",
-       "      <th>reaction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cl</td>\n",
-       "      <td>4.300000</td>\n",
-       "      <td>EX_cl_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ca2</td>\n",
-       "      <td>1.290106</td>\n",
-       "      <td>EX_ca2_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cu2</td>\n",
-       "      <td>0.010000</td>\n",
-       "      <td>EX_cu2_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>so4</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>EX_so4_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>pydx</td>\n",
-       "      <td>0.009822</td>\n",
-       "      <td>EX_pydx_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>hco3</td>\n",
-       "      <td>47.615080</td>\n",
-       "      <td>EX_hco3_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>arab_L</td>\n",
-       "      <td>21.314860</td>\n",
-       "      <td>EX_arab_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>glc_D</td>\n",
-       "      <td>24.978352</td>\n",
-       "      <td>EX_glc_D_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>lac_L</td>\n",
-       "      <td>28.308171</td>\n",
-       "      <td>EX_lac_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>malt</td>\n",
-       "      <td>4.382121</td>\n",
-       "      <td>EX_malt_m</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>62 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   metabolite       flux     reaction\n",
-       "0          cl   4.300000      EX_cl_m\n",
-       "1         ca2   1.290106     EX_ca2_m\n",
-       "2         cu2   0.010000     EX_cu2_m\n",
-       "3         so4  10.000000     EX_so4_m\n",
-       "4        pydx   0.009822    EX_pydx_m\n",
-       "..        ...        ...          ...\n",
-       "57       hco3  47.615080    EX_hco3_m\n",
-       "58     arab_L  21.314860  EX_arab_L_m\n",
-       "59      glc_D  24.978352   EX_glc_D_m\n",
-       "60      lac_L  28.308171   EX_lac_L_m\n",
-       "61       malt   4.382121    EX_malt_m\n",
-       "\n",
-       "[62 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.chdir('../media')\n",
-    "#load the components of the medium\n",
-    "medium = pd.read_excel('DM38_components.xlsx')\n",
-    "# rename the columns of the medium for simplicity\n",
-    "medium = medium.rename(columns={'Component':'metabolite','Concentration (mM)':'flux'}) \n",
-    "#for use in MICOM, we need to add a prefix and suffix to each entry in the reaction column\n",
-    "medium['reaction'] = 'EX_' + medium['metabolite'] + '_m' #reaction column\n",
+    "#load the medium\n",
+    "medium = pd.read_csv('../media/DM38.csv')\n",
     "medium"
    ]
   },
@@ -312,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c4b0891-0c5c-496f-a4c7-be320b40f7a0",
    "metadata": {},
    "outputs": [],
@@ -340,76 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a978164-150c-4b9f-95c0-369275a5a5bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 882/882 [00:01<00:00, 503.34it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[15:01:42] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> Found existing models for <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">651</span> samples. Will skip those. Delete the output folder if <a href=\"file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">build.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py#95\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">95</span></a>\n",
-       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span>         you would like me to rebuild them.                                                  <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">           </span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[15:01:42]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m Found existing models for \u001b[1;36m651\u001b[0m samples. Will skip those. Delete the output folder if \u001b]8;id=841213;file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py\u001b\\\u001b[2mbuild.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=60249;file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py#95\u001b\\\u001b[2m95\u001b[0m\u001b]8;;\u001b\\\n",
-       "\u001b[2;36m           \u001b[0m         you would like me to rebuild them.                                                  \u001b[2m           \u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35689c8452844bdeab0b4dc2dd3053bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Running <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 89%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:06:04</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Running \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m\u001b[38;5;237m━━━━\u001b[0m \u001b[35m 89%\u001b[0m \u001b[36m0:06:04\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.chdir('../agora/data')\n",
     "#use the build table function to construct a taxonomy table\n",
@@ -431,30 +239,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "20207163-83eb-4086-add9-d65b8f28342f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../models'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../models\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#Read the manifest produced above\u001b[39;00m\n\u001b[1;32m      3\u001b[0m manifest_low \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minvitro/low_richness/manifest.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../models'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.chdir('../models')\n",
     "#Read the manifest produced above\n",
-    "manifest_low = pd.read_csv('invitro/low_richness/manifest.csv')\n",
-    "#fix the medium such that all samples can grow with a community growth rate of 0.3\n",
-    "medium_fixed = micom.workflows.fix_medium(manifest_low,'invitro/low_richness', medium, community_growth = 0.3, summarize = True)\n",
+    "manifest_low = pd.read_csv('../../models/invitro/low_richness/manifest.csv')\n",
     "#grow the models, using the medium and a tradeoff value of 0.7\n",
-    "growth = micom.workflows.grow(manifest_low,'invitro/low_richness',medium_fixed,\n",
+    "growth = micom.workflows.grow(manifest_low,'../../models/invitro/low_richness',medium,\n",
     "                           tradeoff = 0.7, threads = 10)\n",
     "#isolate exchanges, and multiply the fluxes by abundances for absolute production\n",
     "exchanges = micom.measures.production_rates(growth)\n",
@@ -518,9 +311,11 @@
   {
    "cell_type": "markdown",
    "id": "25774a81-1ab9-454a-bbcd-d9c014740e0e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Now, we'll repeat this for high richness models, with 11-25 taxa per community"
+    "## We'll repeat this for high richness models, with 11-25 taxa per community"
    ]
   },
   {
@@ -579,13 +374,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('../models')\n",
     "#load the manifest for the high richness communities\n",
-    "manifest_high = pd.read_csv('invitro/high_richness/manifest.csv')\n",
-    "#fix the medium such that all samples can grow with a community growth rate of 0.3\n",
-    "medium_fixed = micom.workflows.fix_medium(manifest_low,'invitro/high_richness', medium, community_growth = 0.3, summarize = True)\n",
+    "manifest_high = pd.read_csv('../../models/invitro/high_richness/manifest.csv')\n",
     "#grow the models, using the medium and a tradeoff value of 0.7\n",
-    "growth = micom.workflows.grow(manifest_low,'invitro/high_richness',medium_fixed,\n",
+    "growth = micom.workflows.grow(manifest_low,'../../models/invitro/high_richness',medium,\n",
     "                           tradeoff = 0.7, threads = 10)\n",
     "exchanges = micom.measures.production_rates(growth)\n",
     "but_high = exchanges[exchanges.reaction.str.startswith('EX_but(e)')].rename(columns = {'flux':'predicted'})\n",
@@ -657,9 +449,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('../results')\n",
-    "but_low.to_csv('invitro_low.csv')\n",
-    "but_high.to_csv('invitro_high.csv')"
+    "but_low.to_csv('../results/invitro_low.csv')\n",
+    "but_high.to_csv('../results/invitro_high.csv')"
    ]
   }
  ],
