--- a/notebooks/study_a.ipynb
+++ b/notebooks/study_a.ipynb
@@ -55,11 +55,12 @@
     "# Find the mean of fluxes between replicates\n",
     "res = scfas.groupby(['treatment','timepoint','subject_id','analyte']).mean()\n",
     "# Add the standard deviation for each group\n",
-    "res['std'] = scfas.groupby(['treatment','timepoint','subject_id','analyte'])['flux'].std()\n",
+    "res['sem'] = scfas.groupby(['treatment','timepoint','subject_id','analyte'])['flux'].sem()\n",
     "# Reset the index for clarity, keeping only the columns we need\n",
-    "res = res.reset_index()[['treatment','subject_id','analyte','flux','std']]\n",
+    "res = res.reset_index()[['treatment','subject_id','analyte','flux','sem']]\n",
     "# Pivot the table for ease of plotting\n",
-    "measured = pd.pivot_table(res,columns = 'analyte',index = ['subject_id','treatment'],values = ['flux','std'])"
+    "measured = pd.pivot_table(res,columns = 'analyte',index = ['subject_id','treatment'],values = ['flux','sem'])\n",
+    "measured"
    ]
   },
   {
@@ -138,7 +139,7 @@
    "id": "7004d0e4-95a1-4d79-a816-2d226d8049e7",
    "metadata": {},
    "source": [
-    "## First, we'll gather our medium. We'll load in the carbon-depleted standard european medium that was constructed and functionally completed in the medium_construction.ipynb notebook."
+    "## Next, we'll gather our medium. We'll load in the carbon-depleted standard european medium that was constructed and functionally completed in the medium_construction.ipynb notebook."
    ]
   },
   {
