--- a/notebooks/study_b.ipynb
+++ b/notebooks/study_b.ipynb
@@ -46,18 +46,19 @@
     "scfas = pd.read_csv('../data/studyB_SCFAs.csv') \n",
     "# Divide SCFA production by culturing time to estimate flux\n",
     "scfas[['acetate','butyrate','propionate']]= scfas[['acetate','butyrate','propionate']]/24 \n",
-    "# Make the donor column a string, for simplicity\n",
-    "scfas['donor'] = scfas['donor'].astype('str')\n",
+    "# Make the subject id column a string, for simplicity\n",
+    "scfas['subject_id'] = scfas['subject_id'].astype('str')\n",
     "# Melt the SCFA columns into one column\n",
-    "scfas = pd.melt(scfas, id_vars = ['donor','treatment'], value_vars = ['acetate','butyrate','propionate'],\n",
+    "scfas = pd.melt(scfas, id_vars = ['subject_id','treatment'], value_vars = ['acetate','butyrate','propionate'],\n",
     "             value_name = 'flux', var_name = 'analyte')\n",
     "# Get mean values for each SCFA per sample\n",
-    "res = scfas.groupby(['treatment','donor','analyte']).mean()\n",
+    "res = scfas.groupby(['treatment','subject_id','analyte']).mean()\n",
     "# Get standard deviation for each \n",
-    "res['sem'] = scfas.groupby(['treatment','donor','analyte']).sem()\n",
+    "res['sem'] = scfas.groupby(['treatment','subject_id','analyte']).sem()\n",
     "# Reset the index of the dataframe keeping only samples that are used \n",
-    "res = res.reset_index()[['treatment','donor','analyte','flux','sem']]\n",
-    "measured = pd.pivot_table(res,columns = 'analyte',index = ['donor','treatment'],values = ['flux','sem'])\n",
+    "res = res.reset_index()[['treatment','subject_id','analyte','flux','sem']]\n",
+    "# Pivot the table for ease of plotting\n",
+    "measured = pd.pivot_table(res,columns = 'analyte',index = ['subject_id','treatment'],values = ['flux','sem'])\n",
     "measured"
    ]
   },
@@ -171,8 +172,8 @@
     "medium = pd.read_csv('../media/european_lowcarbon.csv',index_col = 0)[['reaction','metabolite','flux']]\n",
     "# Dilute to 10% of original content\n",
     "medium['flux'] = medium['flux']*.1\n",
-    "# We'll also build a treatment medium, including an inulin supplement\n",
-    "pectin = pd.DataFrame({'reaction':['EX_pect_m'],'metabolite':['pectin_m'],'flux':[0.75]})\n",
+    "# We'll also build a treatment medium, including an pectin supplement\n",
+    "pectin = pd.DataFrame({'reaction':['EX_pect_m'],'metabolite':['pect_m'],'flux':[0.75]})\n",
     "treatment_medium = pd.concat([medium, pectin])"
    ]
   },
@@ -218,7 +219,7 @@
    "source": [
     "# Read the model manifest\n",
     "manifest = pd.read_csv('../models/studyB/manifest.csv')\n",
-    "# Isolate only the T0 samples that underwent inulin treatment, designated E and K\n",
+    "# Isolate the samples that underwent treatment\n",
     "manifest = manifest[manifest.sample_id.str.contains('Pectin')]\n",
     "# Grow the models with a tradeoff value of 0.7\n",
     "growth = micom.workflows.grow(manifest,'../models/studyB',medium=treatment_medium,tradeoff=.7,strategy='none',threads = 20)\n",
@@ -284,10 +285,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "965cf4ee-e801-4e64-ab03-7823daf4008e",
+   "id": "031474d0-f30e-4526-8371-421667bdcf46",
    "metadata": {},
    "source": [
-    "## Finally, we can plot the results for all three SCFAs"
+    "## Now we'll concatenate the predictions with the measured scfa values, and rename the columns so they don't overlap"
    ]
   },
   {
@@ -304,6 +305,14 @@
     "# Join column names for plotting\n",
     "scfasTotal.columns = ['_'.join(col) for col in scfasTotal.columns.values]\n",
     "scfasTotal.reset_index(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "965cf4ee-e801-4e64-ab03-7823daf4008e",
+   "metadata": {},
+   "source": [
+    "## Finally, we can plot the results for all three SCFAs"
    ]
   },
   {
