updated Study C notebook

--- a/notebooks/study_c.ipynb
+++ b/notebooks/study_c.ipynb
@@ -92,7 +92,8 @@
     "                   var_name = 'id', \n",
     "                   value_name = 'abundance')\n",
     "# Add a genus column, as required by MICOM for the taxonomy table\n",
-    "taxonomy['genus'] = taxonomy['id'].str.split(';').str[5].str.split('.').str[0]"
+    "taxonomy['genus'] = taxonomy['id'].str.split(';').str[5].str.split('.').str[0]\n",
+    "taxonomy"
    ]
   },
   {
@@ -129,12 +130,12 @@
    "outputs": [],
    "source": [
     "models = micom.workflows.build(taxonomy,out_folder = '../models/studyC',\n",
-    "                      model_db = agora, cutoff = 0.001, threads = 20)"
+    "                      model_db = agora, cutoff = 0.001, threads = 10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d529123-e2b4-4394-8ab8-05155a63ee33",
+   "id": "94a8d6ab-00b7-49a0-a7a9-3f35a0c2a0b9",
    "metadata": {},
    "source": [
     "## Next, we'll gather our medium. We'll load in the carbon-depleted standard european medium that was constructed and functionally completed in the medium_construction.ipynb notebook."
@@ -242,23 +243,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_fluxes(df):\n",
+    "def get_fluxes(df, treatment):\n",
     "    # Isolate SCFA fluxes\n",
     "    df = df[(df['metabolite']=='but[e]')|(df['metabolite']=='ppa[e]')|(df['metabolite']=='ac[e]')]\n",
     "    # Map the metadata onto the dataframe to align with the measured samples \n",
-    "    df['subject_id'] = df['sample_id'].str.split('_').str[1]\n",
-    "    df['treatment'] = df['sample_id'].str.split('_').str[0]\n",
+    "    df['subject_id'] = df['sample_id']\n",
+    "    df['treatment'] = treatment\n",
     "    # Take the average production of the replicates\n",
-    "    res = df.groupby(['subject_id','treatment','name']).mean()\n",
-    "    # Calculate the standard deviation of the replicates\n",
-    "    res['sem'] = df.groupby(['subject_id','treatment','name'])['flux'].sem()\n",
-    "    # Reset the index\n",
-    "    res = res.rename(columns = {'flux':'flux-predicted', 'sem':'sem-predicted'}).reset_index()\n",
+    "    res = df.groupby(['subject_id','treatment','name']).mean().reset_index()\n",
+    "    \n",
     "    # Pivot the table for alignment with the measurement dataframe\n",
     "    predicted = pd.pivot_table(res,\n",
     "                columns = 'name',\n",
     "                index = ['subject_id','treatment'], \n",
-    "                values = ['flux-predicted','sem-predicted'])\n",
+    "                values = 'flux')\n",
+    "    predicted = predicted.rename(columns = {'acetate':'flux-predicted_acetate',\n",
+    "                                'butyrate':'flux-predicted_butyrate',\n",
+    "                                'propionate':'flux-predicted_propionate'}).reset_index()\n",
     "    return predicted"
    ]
   },
@@ -278,11 +279,12 @@
    "outputs": [],
    "source": [
     "# Control Samples\n",
-    "predicted = get_fluxes(control)\n",
+    "predicted = get_fluxes(control, 'CTRL',)\n",
     "# Pectin samples\n",
-    "predicted = pd.concat([predicted, get_fluxes(pectin)], axis = 0)\n",
+    "predicted = pd.concat([predicted, get_fluxes(pectin, 'PECT')], axis = 0)\n",
     "# And inulin samples\n",
-    "predicted = pd.concat([predicted, get_fluxes(inulin)], axis = 0)"
+    "predicted = pd.concat([predicted, get_fluxes(inulin, 'INUL')], axis = 0)\n",
+    "predicted.set_index(['subject_id','treatment'], inplace = True)"
    ]
   },
   {
@@ -300,13 +302,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "measured.columns = ['_'.join(col) for col in measured.columns.values]\n",
     "# Concatenate dataframes\n",
     "scfasTotal = pd.concat([measured,predicted], axis = 1)\n",
     "# Flatten multiindex\n",
     "scfasTotal.columns = scfasTotal.columns.to_flat_index()\n",
     "# Join column names for plotting\n",
-    "scfasTotal.columns = ['_'.join(col) for col in scfasTotal.columns.values]\n",
     "scfasTotal.reset_index(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc52c475-3941-4b28-9626-1b9fc7bf633c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scfasTotal"
    ]
   },
   {
@@ -327,14 +339,11 @@
     "ac_plot = (ggplot(\n",
     "    scfasTotal, aes(x = ('flux_acetate'), y = ('flux-predicted_acetate')))\n",
     "    +geom_point(aes(color = 'treatment'),size = 5)\n",
-    "    +geom_errorbar(aes(x=\"flux_acetate\", \n",
-    "                        ymin = scfasTotal['flux-predicted_acetate'] - scfasTotal['sem-predicted_acetate'],\n",
-    "                        ymax = scfasTotal['flux-predicted_acetate'] + scfasTotal['sem-predicted_acetate']))\n",
     "    +geom_errorbarh(aes(y =\"flux-predicted_acetate\", \n",
     "                        xmin = scfasTotal['flux_acetate'] - scfasTotal['sem_acetate'],\n",
     "                        xmax = scfasTotal['flux_acetate'] + scfasTotal['sem_acetate']))\n",
     "    +geom_smooth(method='lm',linetype='--')\n",
-    "    +scale_color_manual(values = ['deepskyblue','darksalmon'])\n",
+    "    +scale_color_manual(values = ['deepskyblue','darksalmon','lightgreen'])\n",
     "    +labs(x='Measured($\\dfrac{mmol}{L*h}$)',y = 'Predicted($\\dfrac{mmol}{gDCW*h}$)',title='Acetate')\n",
     "    +theme(text = element_text(size=20),panel_background=element_rect(fill = \"white\",\n",
     "                            colour = \"white\",size = 0.5, linetype = \"solid\"),\n",
@@ -354,14 +363,11 @@
     "ppa_plot = (ggplot(\n",
     "    scfasTotal, aes(x = ('flux_propionate'), y = ('flux-predicted_propionate')))\n",
     "    +geom_point(aes(color = 'treatment'),size = 5)\n",
-    "    +geom_errorbar(aes(x='flux_propionate', \n",
-    "                        ymin = scfasTotal['flux-predicted_propionate'] - scfasTotal['sem-predicted_propionate'],\n",
-    "                        ymax = scfasTotal['flux-predicted_propionate'] + scfasTotal['sem-predicted_propionate']))\n",
     "    +geom_errorbarh(aes(y = 'flux-predicted_propionate', \n",
     "                        xmin = scfasTotal['flux_propionate'] - scfasTotal['sem_propionate'],\n",
     "                        xmax = scfasTotal['flux_propionate'] + scfasTotal['sem_propionate']))\n",
     "    +geom_smooth(method='lm',linetype='--')\n",
-    "    +scale_color_manual(values = ['deepskyblue','darksalmon'])\n",
+    "    +scale_color_manual(values = ['deepskyblue','darksalmon','lightgreen'])\n",
     "    +labs(x='Measured($\\dfrac{mmol}{L*h}$)',y = 'Predicted($\\dfrac{mmol}{gDCW*h}$)',title='Propionate')\n",
     "    +theme(text = element_text(size=20),panel_background=element_rect(fill = \"white\",\n",
     "                            colour = \"white\",size = 0.5, linetype = \"solid\"),\n",
@@ -381,14 +387,11 @@
     "but_plot = (ggplot(\n",
     "    scfasTotal, aes(x = ('flux_butyrate'), y = ('flux-predicted_butyrate')))\n",
     "    +geom_point(aes(color = 'treatment'),size = 5)\n",
-    "    +geom_errorbar(aes(x = 'flux_butyrate', \n",
-    "                        ymin = scfasTotal['flux-predicted_butyrate'] - scfasTotal['sem-predicted_butyrate'],\n",
-    "                        ymax = scfasTotal['flux-predicted_butyrate'] + scfasTotal['sem-predicted_butyrate']))\n",
     "    +geom_errorbarh(aes(y ='flux-predicted_butyrate', \n",
     "                        xmin = scfasTotal['flux_butyrate'] - scfasTotal['sem_butyrate'],\n",
     "                        xmax = scfasTotal['flux_butyrate'] + scfasTotal['sem_butyrate']))\n",
     "    +geom_smooth(method='lm',linetype='--')\n",
-    "    +scale_color_manual(values = ['deepskyblue','darksalmon'])\n",
+    "    +scale_color_manual(values = ['deepskyblue','darksalmon','lightgreen'])\n",
     "    +labs(x='Measured($\\dfrac{mmol}{L*h}$)',y = 'Predicted($\\dfrac{mmol}{gDCW*h}$)',title='Butyrate')\n",
     "    +theme(text = element_text(size=20),panel_background=element_rect(fill = \"white\",\n",
     "                            colour = \"white\",size = 0.5, linetype = \"solid\"),\n",
@@ -413,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flux.to_csv('/proj/gibbons/nbohmann/exvivo/scfa_paper/gurry1.csv')"
+    "scfasTotal.to_csv('../data/studyC.csv')"
    ]
   }
  ],
