updated intervention notebook

--- a/notebooks/arivale.ipynb
+++ b/notebooks/arivale.ipynb
@@ -39,7 +39,7 @@
    "id": "77e19a8d-a539-42cd-ae68-6b850b9dd507",
    "metadata": {},
    "source": [
-    "## First we'll pull in our medium. We'll use a functionally complete medium representing a European diet. "
+    "## First we'll pull in our medium. We'll use a functionally complete medium representing a European diet, built in the medium_construction.ipynb notebook"
    ]
   },
   {
