--- a/notebooks/study_b.ipynb
+++ b/notebooks/study_b.ipynb
@@ -45,7 +45,7 @@
     "# Read in the SCFA data\n",
     "scfas = pd.read_csv('../data/studyB_SCFAs.csv') \n",
     "# Divide SCFA production by culturing time to estimate flux\n",
-    "scfas[['acetate','butyrate','propionate']]= scfas[['acetate','butyrate','propionate']]/24 \n",
+    "scfas[['acetate','butyrate','propionate']]= scfas[['acetate','butyrate','propionate']]/4 \n",
     "# Make the subject id column a string, for simplicity\n",
     "scfas['subject_id'] = scfas['subject_id'].astype('str')\n",
     "# Melt the SCFA columns into one column\n",
@@ -53,7 +53,7 @@
     "             value_name = 'flux', var_name = 'analyte')\n",
     "# Get mean values for each SCFA per sample\n",
     "res = scfas.groupby(['treatment','subject_id','analyte']).mean()\n",
-    "# Get standard deviation for each \n",
+    "# Get standard error of mean for each \n",
     "res['sem'] = scfas.groupby(['treatment','subject_id','analyte']).sem()\n",
     "# Reset the index of the dataframe keeping only samples that are used \n",
     "res = res.reset_index()[['treatment','subject_id','analyte','flux','sem']]\n",
@@ -154,8 +154,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "08a9bf2d-46f8-4767-8525-7209c0b504a8",
+   "cell_type": "raw",
+   "id": "9a22aca3-4c90-4eb4-a247-88bf19810ed6",
    "metadata": {},
    "source": [
     "## Next, we'll gather our medium. We'll load in the carbon-depleted standard european medium that was constructed and functionally completed in the medium_construction.ipynb notebook."
@@ -250,7 +250,7 @@
     "    df['treatment'] = df['sample_id'].str.split('_').str[0]\n",
     "    # Take the average production of the replicates\n",
     "    res = df.groupby(['subject_id','treatment','name']).mean()\n",
-    "    # Calculate the standard deviation of the replicates\n",
+    "    # Calculate the standard error of mean of the replicates\n",
     "    res['sem'] = df.groupby(['subject_id','treatment','name'])['flux'].sem()\n",
     "    # Reset the index\n",
     "    res = res.rename(columns = {'flux':'flux-predicted', 'sem':'sem-predicted'}).reset_index()\n",
